--- a/themes/mypiggyback/services.html
+++ b/themes/mypiggyback/services.html
@@ -58,7 +58,15 @@
 
 
     <!-- Start of Shariful -->
-
+     <symbol id="ftr-phn-icon-svg" xmlns="http://www.w3.org/2000/svg" width="17" height="16.151" viewBox="0 0 17 16.151">
+      <path id="Phone_Icon" data-name="Phone Icon" d="M476.748,3046.357l-2.47-1.567a1.425,1.425,0,0,0-1.832.345l-.557.85a19.651,19.651,0,0,1-5.948-5.6l.93-.558a1.312,1.312,0,0,0,.557-.85,1.17,1.17,0,0,0-.212-.982l-1.62-2.337a1.389,1.389,0,0,0-1.779-.424l-2.363,1.274c-.133.08-.212.133-.345.212-1.779,1.912-.159,6.24,3.956,10.116,2.974,2.841,6.16,4.381,8.417,4.381a3.037,3.037,0,0,0,2.044-.637l.292-.292h0l1.355-2.124A1.253,1.253,0,0,0,476.748,3046.357Zm-2.124,3.159c-1.222,1.009-5.019-.265-8.63-3.664-3.557-3.4-4.885-7.009-3.823-8.151l2.2-1.275,1.566,2.257-.929.558a1.316,1.316,0,0,0-.558.849,1.172,1.172,0,0,0,.213.983,21.986,21.986,0,0,0,6.452,6.16,1.425,1.425,0,0,0,1.832-.345l.637-.93,2.416,1.487Z" transform="translate(-460.394 -3035.064)" fill="#fff"/>
+    </symbol>
+    <symbol id="ftr-email-icon-svg" xmlns="http://www.w3.org/2000/svg" width="19" height="12.666" viewBox="0 0 19 12.666">
+      <path id="Email_icon" data-name="Email icon" d="M477.847,3076.247H461.969a1.585,1.585,0,0,0-1.575,1.575v9.515a1.586,1.586,0,0,0,1.575,1.576h15.848a1.587,1.587,0,0,0,1.576-1.576v-9.515A1.542,1.542,0,0,0,477.847,3076.247Zm-1.9,1.575-5.709,3.479a.631.631,0,0,1-.565,0l-5.8-3.479Zm-13.975,9.515v-8.8l6.809,4.133a1.838,1.838,0,0,0,1.1.327,1.777,1.777,0,0,0,1.1-.327l6.809-4.133v8.8Z" transform="translate(-460.394 -3076.247)" fill="#fff"/>
+    </symbol>
+    <symbol id="ftr-map-marker-icon-svg" xmlns="http://www.w3.org/2000/svg" width="16" height="21.333" viewBox="0 0 16 21.333">
+      <path id="Map_Marker_icon" data-name="Map Marker icon" d="M468.394,3113.17a8.188,8.188,0,0,0-8,8.433c0,4,5.5,10.567,7.2,12.534a.961.961,0,0,0,.8.366,1.018,1.018,0,0,0,.8-.366c1.7-1.934,7.2-8.6,7.2-12.534A8.189,8.189,0,0,0,468.394,3113.17Zm0,19.2c-3.034-3.567-6.234-8.267-6.234-10.767a6.248,6.248,0,1,1,12.467,0C474.627,3124.1,471.427,3128.8,468.394,3132.37Zm0-14.767a3.567,3.567,0,1,0,3.566,3.567A3.571,3.571,0,0,0,468.394,3117.6Zm0,5.334a1.767,1.767,0,1,1,1.766-1.767A1.779,1.779,0,0,1,468.394,3122.937Z" transform="translate(-460.394 -3113.17)" fill="#fff"/>
+    </symbol>
 
 
     <!-- Start of Sabbir -->
