--- a/themes/mypiggyback/contact.html
+++ b/themes/mypiggyback/contact.html
@@ -218,7 +218,7 @@
 
 </head>
 <body>
-<header class="header-wrap">
+<header class="header-wrap" style="display: none;">
   <div class="top-bar">
     <div class="container">
       <div class="row">
@@ -326,85 +326,47 @@
   <div class="contact-map">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d66815.33056846341!2d-0.14238880307146762!3d51.51248988308131!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2sbd!4v1615400813839!5m2!1sen!2sbd" width="100%" height="700" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </div>
-  <div class="contat-frm-lft">
-    <div class="contat-frm-cntlr clearfix">
-      <div class="contat-frm-wrp">
-        <div class="contat-frm-dsc">
-          <h2 class="contact-title left-icon-title fl-h2">
-          <span>Send a message...</span>
-           <i class="far fa-envelope-open"></i>
-          </h2>
-          <p>If you have any questions or concerns with our services, your order or our website please contact us on this page.</p>
-        </div>
-        <div class="cnt-form">
-          <form>
-            <div class="input-fields-row">
-              <div class="input-field-col input-group">
-                <input type="text" name="fname" placeholder="Full Name">
+  <div class="contact-form-sec">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="contat-frm-cntlr clearfix">
+            <div class="contat-frm-wrp">
+              <div class="contat-frm-dsc">
+                <h2 class="contact-title left-icon-title fl-h2">
+                <span>Send a message...</span>
+                 <i class="far fa-envelope-open"></i>
+                </h2>
+                <p>If you have any questions or concerns with our services, your order or our website please contact us on this page.</p>
               </div>
-            </div>
-            <div class="input-fields-row">
-              <div class="input-field-col input-group">
-                <input type="email" placeholder="Email Address">
+              <div class="cnt-form">
+                <form>
+                  <div class="input-fields-row">
+                    <div class="input-field-col input-group">
+                      <input type="text" name="fname" placeholder="Full Name">
+                    </div>
+                  </div>
+                  <div class="input-fields-row">
+                    <div class="input-field-col input-group">
+                      <input type="email" placeholder="Email Address">
+                    </div>
+                  </div>
+                  <div class="input-fields-row">
+                    <div class="input-field-col">
+                      <textarea placeholder="Your Message"></textarea>
+                    </div>
+                  </div>
+                  <div class="contact-submit-btn">
+                    <input class="fl-contct-btn fl-red-btn" type="submit" value="send message">
+                  </div>
+                </form>
               </div>
-            </div>
-            <div class="input-fields-row">
-              <div class="input-field-col">
-                <textarea placeholder="Your Message"></textarea>
-              </div>
-            </div>
-            <div class="contact-submit-btn">
-              <input class="fl-contct-btn fl-red-btn" type="submit" value="send message">
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- <div class="container">
-    <div class="row">
-      <div class="col-md-5">
-        <div class="contat-frm-cntlr clearfix">
-          <div class="contat-frm-wrp">
-            <div class="contat-frm-dsc">
-              <h2 class="contact-title left-icon-title fl-h2">
-              <span>Send a message...</span>
-               <i class="far fa-envelope-open"></i>
-              </h2>
-              <p>If you have any questions or concerns with our services, your order or our website please contact us on this page.</p>
-            </div>
-            <div class="cnt-form">
-              <form>
-                <div class="input-fields-row">
-                  <div class="input-field-col input-group">
-                    <input type="text" name="fname" placeholder="Full Name">
-                  </div>
-                </div>
-                <div class="input-fields-row">
-                  <div class="input-field-col input-group">
-                    <input type="email" placeholder="Email Address">
-                  </div>
-                </div>
-                <div class="input-fields-row">
-                  <div class="input-field-col">
-                    <textarea placeholder="Your Message"></textarea>
-                  </div>
-                </div>
-                <div class="contact-submit-btn">
-                  <input class="fl-contct-btn fl-red-btn" type="submit" value="send message">
-                </div>
-              </form>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-md-7">
-        <div class="contact-map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d66815.33056846341!2d-0.14238880307146762!3d51.51248988308131!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2sbd!4v1615400813839!5m2!1sen!2sbd" width="100%" height="700" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-      </div>
     </div>
-  </div> -->
+  </div>
 </section>
 
 
@@ -494,7 +456,7 @@
 
 
 
-<footer class="footer-wrp">
+<footer class="footer-wrp" style="display: none;">
   <div class="ftr-top">
     <div class="ftr-top-bg">
       <img src="assets/images/ftr-bg-icon.png">
