contact page fix

--- a/themes/mypiggyback/contact.html
+++ b/themes/mypiggyback/contact.html
@@ -218,7 +218,7 @@
 
 </head>
 <body>
-<header class="header-wrap" style="display: none;">
+<header class="header-wrap">
   <div class="top-bar">
     <div class="container">
       <div class="row">
@@ -456,7 +456,7 @@
 
 
 
-<footer class="footer-wrp" style="display: none;">
+<footer class="footer-wrp">
   <div class="ftr-top">
     <div class="ftr-top-bg">
       <img src="assets/images/ftr-bg-icon.png">
