--- a/themes/mypiggyback/about.html
+++ b/themes/mypiggyback/about.html
@@ -162,6 +162,13 @@
       <path id="Path_3233" data-name="Path 3233" d="M1204.86,2014.643h-31.929a1.115,1.115,0,0,1-1.115-1.115v-67.315a6.578,6.578,0,0,1,6.571-6.57h8.517a1.114,1.114,0,1,1,0,2.227h-8.517a4.348,4.348,0,0,0-4.343,4.343v66.2h30.816a1.114,1.114,0,1,1,0,2.228Zm10.033,0h-5.578a1.114,1.114,0,0,1,0-2.228h4.814a30.1,30.1,0,0,1,26.827-18.887V1977.56l-24.332-33.88a4.355,4.355,0,0,0-3.528-1.81H1191.36a1.114,1.114,0,1,1,0-2.227H1213.1a6.583,6.583,0,0,1,5.337,2.738l24.542,34.171a1.114,1.114,0,0,1,.209.65v17.419a1.114,1.114,0,0,1-1.114,1.114,27.869,27.869,0,0,0-26.133,18.181A1.114,1.114,0,0,1,1214.893,2014.643Zm8.238-36.327h-38.247a5.648,5.648,0,0,1-5.642-5.642v-20.58a5.032,5.032,0,0,1,5.026-5.026h24.773a7.066,7.066,0,0,1,5.726,2.938l13.35,18.588a6.14,6.14,0,0,1-4.986,9.722Zm-38.863-29.02a2.8,2.8,0,0,0-2.8,2.8v20.58a3.417,3.417,0,0,0,3.414,3.414h38.246a3.912,3.912,0,0,0,3.178-6.194l-13.35-18.589a4.834,4.834,0,0,0-3.917-2.009Zm7.242,40.923h-5.057a7.219,7.219,0,0,1-7.211-7.21,1.114,1.114,0,0,1,1.114-1.114h17.25a1.114,1.114,0,0,1,1.114,1.114A7.218,7.218,0,0,1,1191.51,1990.219Zm-9.915-6.1a4.993,4.993,0,0,0,4.858,3.869h5.057a4.992,4.992,0,0,0,4.857-3.869Z" transform="translate(-1171.816 -1939.643)"/>
     </symbol>
 
+    <symbol id="title-location-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="44.234" viewBox="0 0 30 44.234">
+      <g id="Group_1443" data-name="Group 1443" transform="translate(-154.525 -833.542)">
+        <ellipse id="Shadow" cx="15" cy="1.5" rx="15" ry="1.5" transform="translate(154.525 874.776)" />
+        <path id="Path_2476" data-name="Path 2476" d="M155.367,847.7a14.158,14.158,0,1,1,28.316,0c0,5.708-1.989,7.3-12.7,22.835a1.77,1.77,0,0,1-2.91,0C157.355,855,155.367,853.408,155.367,847.7Zm20.057,0a5.9,5.9,0,1,0-5.9,5.9A5.9,5.9,0,0,0,175.424,847.7Z"/>
+      </g>
+    </symbol>
+
 
     <!-- Start of Milon -->
 
@@ -177,6 +184,12 @@
     </symbol>
     <symbol id="ftr-map-marker-icon-svg" xmlns="http://www.w3.org/2000/svg" width="16" height="21.333" viewBox="0 0 16 21.333">
       <path id="Map_Marker_icon" data-name="Map Marker icon" d="M468.394,3113.17a8.188,8.188,0,0,0-8,8.433c0,4,5.5,10.567,7.2,12.534a.961.961,0,0,0,.8.366,1.018,1.018,0,0,0,.8-.366c1.7-1.934,7.2-8.6,7.2-12.534A8.189,8.189,0,0,0,468.394,3113.17Zm0,19.2c-3.034-3.567-6.234-8.267-6.234-10.767a6.248,6.248,0,1,1,12.467,0C474.627,3124.1,471.427,3128.8,468.394,3132.37Zm0-14.767a3.567,3.567,0,1,0,3.566,3.567A3.571,3.571,0,0,0,468.394,3117.6Zm0,5.334a1.767,1.767,0,1,1,1.766-1.767A1.779,1.779,0,0,1,468.394,3122.937Z" transform="translate(-460.394 -3113.17)" fill="#fff"/>
+    </symbol>
+    <symbol id="title-location-icon-white-svg" xmlns="http://www.w3.org/2000/svg" width="30" height="44.235" viewBox="0 0 30 44.235">
+      <g id="Group_1037" data-name="Group 1037" transform="translate(-148.025 -903.367)">
+        <ellipse id="Shadow" cx="15" cy="1.5" rx="15" ry="1.5" transform="translate(148.025 944.602)" fill="#fff"/>
+        <path id="Path_2907" data-name="Path 2907" d="M148.867,917.525a14.158,14.158,0,1,1,28.316,0c0,5.709-1.989,7.3-12.7,22.836a1.771,1.771,0,0,1-2.91,0C150.855,924.828,148.867,923.234,148.867,917.525Zm20.057,0a5.9,5.9,0,1,0-5.9,5.9A5.9,5.9,0,0,0,168.924,917.525Z" fill="#fff"/>
+      </g>
     </symbol>
 
 
@@ -361,7 +374,10 @@
             <div class="fl-entry-hdr">
               <h2 class="mbp-about-entry-title left-icon-title fl-h2">
                 <span>Our Story in numbers...</span>
-                <i><img src="assets/images/title-location-icon-white.svg" alt=""></i>
+                <i>
+                  <svg class="title-location-icon-white-svg" width="30" height="44.235" viewBox="0 0 30 44.234" fill="#fff">
+                  <use xlink:href="#title-location-icon-white-svg"></use> </svg>
+                </i>
               </h2>
             </div>
             <div class="mbp-about-num-grds">
@@ -452,7 +468,8 @@
           <div class="mbp-about-team-entry-hdr">
             <h2 class="mbp-about-team-entry-hdr-title left-icon-title fl-h2">
               <span>Our TEAM...</span>
-              <i><img src="assets/images/title-location-icon.svg" alt=""></i>
+              <i><svg class="title-location-icon" width="30" height="44.234" viewBox="0 0 30 44.234" fill="#ec131b">
+              <use xlink:href="#title-location-icon"></use> </svg></i>
             </h2>
           </div>
           <div class="mbp-abot-team-grds">
@@ -565,7 +582,10 @@
               <div class="mbp-about-des">
                 <h2 class="mbp-location-entry-hdr-title left-icon-title fl-h2">
                   <span>Our Locations...</span>
-                  <i><img src="assets/images/title-location-icon.svg" alt=""></i>
+                  <i>
+                    <svg class="title-location-icon" width="30" height="44.234" viewBox="0 0 30 44.234" fill="#ec131b">
+                    <use xlink:href="#title-location-icon"></use> </svg>
+                  </i>
                 </h2>
                 <h3 class="mbp-loca-title left-icon-title">
                   <span>England </span>
@@ -712,6 +732,8 @@
 <script src="assets/js/jquery.matchHeight-min.js"></script>
 <script src="assets/js/app.js"></script>
 <script src="assets/js/wow.min.js"></script>
+<script src="assets/js/jquery.counterup.min.js"></script>
+<script src="assets/js/waypoints.min.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
