--- a/themes/mypiggyback/front-page.html
+++ b/themes/mypiggyback/front-page.html
@@ -447,7 +447,7 @@
                       <img src="assets/images/piggyback-item-img-002.jpg" alt="">
                       <!-- <div class="piggyback-item-img inline-bg" style="background-image: url('assets/images/piggyback-item-img-002.jpg');"></div> -->
                     </div>
-                    <div class="piggyback-item-desc">
+                    <div class="piggyback-item-desc mHc">
                       <p>Use your phones location to book<br> 
                       a service for your broken vehicle</p>
                     </div>
@@ -468,7 +468,7 @@
                       <img src="assets/images/piggyback-item-img-001.jpg" alt="">
                       <!-- <div class="piggyback-item-img inline-bg" style="background-image: url('assets/images/piggyback-item-img-002.jpg');"></div> -->
                     </div>
-                    <div class="piggyback-item-desc">
+                    <div class="piggyback-item-desc mHc">
                       <p>Your super piggy back driver is on<br> 
                      his way! they will contact you soon.</p>
 
@@ -490,7 +490,7 @@
                       <img src="assets/images/piggyback-item-img-003.jpg" alt="">
                       <!-- <div class="piggyback-item-img inline-bg" style="background-image: url('assets/images/piggyback-item-img-002.jpg');"></div> -->
                     </div>
-                    <div class="piggyback-item-desc">
+                    <div class="piggyback-item-desc mHc">
                       <p>Once your piggy back supper hero<br> 
                       arrives they will provde your service.</p>
                     </div>
