--- a/themes/mypiggyback/vehicle-recovery.html
+++ b/themes/mypiggyback/vehicle-recovery.html
@@ -169,6 +169,13 @@
       <path id="Path_3233" data-name="Path 3233" d="M1204.86,2014.643h-31.929a1.115,1.115,0,0,1-1.115-1.115v-67.315a6.578,6.578,0,0,1,6.571-6.57h8.517a1.114,1.114,0,1,1,0,2.227h-8.517a4.348,4.348,0,0,0-4.343,4.343v66.2h30.816a1.114,1.114,0,1,1,0,2.228Zm10.033,0h-5.578a1.114,1.114,0,0,1,0-2.228h4.814a30.1,30.1,0,0,1,26.827-18.887V1977.56l-24.332-33.88a4.355,4.355,0,0,0-3.528-1.81H1191.36a1.114,1.114,0,1,1,0-2.227H1213.1a6.583,6.583,0,0,1,5.337,2.738l24.542,34.171a1.114,1.114,0,0,1,.209.65v17.419a1.114,1.114,0,0,1-1.114,1.114,27.869,27.869,0,0,0-26.133,18.181A1.114,1.114,0,0,1,1214.893,2014.643Zm8.238-36.327h-38.247a5.648,5.648,0,0,1-5.642-5.642v-20.58a5.032,5.032,0,0,1,5.026-5.026h24.773a7.066,7.066,0,0,1,5.726,2.938l13.35,18.588a6.14,6.14,0,0,1-4.986,9.722Zm-38.863-29.02a2.8,2.8,0,0,0-2.8,2.8v20.58a3.417,3.417,0,0,0,3.414,3.414h38.246a3.912,3.912,0,0,0,3.178-6.194l-13.35-18.589a4.834,4.834,0,0,0-3.917-2.009Zm7.242,40.923h-5.057a7.219,7.219,0,0,1-7.211-7.21,1.114,1.114,0,0,1,1.114-1.114h17.25a1.114,1.114,0,0,1,1.114,1.114A7.218,7.218,0,0,1,1191.51,1990.219Zm-9.915-6.1a4.993,4.993,0,0,0,4.858,3.869h5.057a4.992,4.992,0,0,0,4.857-3.869Z" transform="translate(-1171.816 -1939.643)"/>
     </symbol>
 
+    <symbol id="title-location-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="44.234" viewBox="0 0 30 44.234">
+      <g id="Group_1443" data-name="Group 1443" transform="translate(-154.525 -833.542)">
+        <ellipse id="Shadow" cx="15" cy="1.5" rx="15" ry="1.5" transform="translate(154.525 874.776)" />
+        <path id="Path_2476" data-name="Path 2476" d="M155.367,847.7a14.158,14.158,0,1,1,28.316,0c0,5.708-1.989,7.3-12.7,22.835a1.77,1.77,0,0,1-2.91,0C157.355,855,155.367,853.408,155.367,847.7Zm20.057,0a5.9,5.9,0,1,0-5.9,5.9A5.9,5.9,0,0,0,175.424,847.7Z"/>
+      </g>
+    </symbol>
+
 
     <!-- Start of Milon -->
 
@@ -298,10 +305,16 @@
           <div class="page-banner-dsc">
             <h1 class="fl-h1">Vehicle Recovery...</h1>
           </div>
-          <div class="bnr-breadcum">
+          <div class="breadcumbs">
             <ul class="reset-list clearfix">
-              <li><a href="#">HOME</a></li>
-              <li><a href="#">Vehicle Recovery</a></li>
+              <li>
+                <a href="#" class="fl-home-icon">
+                  <span class="item">HOME</span>
+                </a>
+              </li>
+              <li class="active">
+                  <span>Vehicle Recovery...</span>
+              </li>
             </ul>
           </div>
         </div>
@@ -385,14 +398,15 @@
   </div>
 </section>
 
-<section class="piggyback-sec">
+<section class="piggyback-sec vr-piggyback-sec">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="piggyback-cntlr">
           <h2 class="piggyback-title left-icon-title fl-h2">
             <span>book A Piggyback...</span>
-            <i><img src="assets/images/title-location-icon.svg" alt=""></i>
+            <i><svg class="title-location-icon" width="30" height="44.234" viewBox="0 0 30 44.234" fill="#ec131b">
+                  <use xlink:href="#title-location-icon"></use> </svg></i>
           </h2>
           <div class="piggyback-slider piggybackSlider">
 
@@ -403,9 +417,8 @@
                     <div class="piggyback-item-img-cntlr">
                       <img src="assets/images/piggyback-item-img-002.jpg" alt="">
                     </div>
-                    <div class="piggyback-item-desc">
-                      <p>Use your phones location to book<br> 
-                      a service for your broken vehicle</p>
+                    <div class="piggyback-item-desc mHc">
+                      <p>Use your phones location to tell our<br> vehicle recovery driver where you are. Our<br> website will automatically calulate the<br> cost of recovering your vehicle.</p>
                     </div>
                   </div>
                   <div class="piggyback-item-hding">
@@ -423,9 +436,8 @@
                     <div class="piggyback-item-img-cntlr">
                       <img src="assets/images/piggyback-item-img-001.jpg" alt="">
                     </div>
-                    <div class="piggyback-item-desc">
-                      <p>Use your phones location to book<br> 
-                      a service for your broken vehicle</p>
+                    <div class="piggyback-item-desc mHc">
+                      <p>After you have booked this service and<br> any extras, you need to tell us how<br> quickly you would like one of our<br> superheroes to your vehicles location.</p>
                     </div>
                   </div>
                   <div class="piggyback-item-hding">
@@ -443,9 +455,8 @@
                     <div class="piggyback-item-img-cntlr">
                       <img src="assets/images/piggyback-item-img-003.jpg" alt="">
                     </div>
-                    <div class="piggyback-item-desc">
-                      <p>Use your phones location to book<br> 
-                      a service for your broken vehicle</p>
+                    <div class="piggyback-item-desc mHc">
+                      <p>Once you've paid for your order using<br> our secure checkout it's time to relax.<br>One of our superhero piggyback team<br> has put on their cape and is on the way!</p>
                     </div>
                   </div>
                   <div class="piggyback-item-hding">
@@ -490,7 +501,8 @@
 
             <div class="vcl-right-wrap">
               <h2 class="Vehicle-title left-icon-title fl-h2"><span>How it works...</span>
-                <i><img src="assets/images/title-location-icon.svg" alt=""></i>
+                <i><svg class="title-location-icon" width="30" height="44.234" viewBox="0 0 30 44.234" fill="#ec131b">
+                  <use xlink:href="#title-location-icon"></use> </svg></i>
               </h2>
               <div class="ordr-pgbk-hm-rt-img">
                 <img src="assets/images/order-pgbk-home-img-01.png" alt="">
@@ -517,7 +529,8 @@
           </div>
           <h2 class="testimonials-title left-icon-title fl-h2">
             <span>Super testimonials...</span>
-            <i><img src="assets/images/quetarea-icon.svg" alt=""></i>
+            <i><svg class="title-location-icon" width="30" height="44.234" viewBox="0 0 30 44.234" fill="#ec131b">
+                  <use xlink:href="#title-location-icon"></use> </svg></i>
           </h2>
           <div class="testimonials-slider-wrap">
             <div class="testimonials-slider testimonialSlider">
