--- a/themes/mypiggyback/vehicle-recovery.html
+++ b/themes/mypiggyback/vehicle-recovery.html
@@ -176,6 +176,15 @@
       </g>
     </symbol>
 
+    <symbol id="quadarea-icon" xmlns="http://www.w3.org/2000/svg" width="52.562" height="44" viewBox="0 0 52.562 44">
+      <g id="Speech_marks" data-name="Speech marks" transform="translate(-150 -2475.098)">
+        <g id="Group_1508" data-name="Group 1508">
+          <path id="Path_4330" data-name="Path 4330" d="M171.441,2499.94V2519.1H150v-15.125q0-12.282,3.556-17.783,4.665-7.332,14.774-11.092l4.888,6.417q-6.111,2.109-9,6.279T161,2499.94Z"/>
+          <path id="Path_4331" data-name="Path 4331" d="M200.785,2499.94V2519.1H179.344v-15.125q0-12.282,3.555-17.783,4.665-7.332,14.775-11.092l4.888,6.417q-6.111,2.109-9,6.279t-3.222,12.146Z"/>
+        </g>
+      </g>
+    </symbol>
+
 
     <!-- Start of Milon -->
 
@@ -404,7 +413,7 @@
       <div class="col-md-12">
         <div class="piggyback-cntlr">
           <h2 class="piggyback-title left-icon-title fl-h2">
-            <span>book A Piggyback...</span>
+            <span>How to book this service...</span>
             <i><svg class="title-location-icon" width="30" height="44.234" viewBox="0 0 30 44.234" fill="#ec131b">
                   <use xlink:href="#title-location-icon"></use> </svg></i>
           </h2>
@@ -441,7 +450,7 @@
                     </div>
                   </div>
                   <div class="piggyback-item-hding">
-                    <h3 class="piggyback-item-title fl-h3">1. wait</h3>
+                    <h3 class="piggyback-item-title fl-h3">2. wait</h3>
                     <span></span>
                   </div>
                 </div>
@@ -529,8 +538,8 @@
           </div>
           <h2 class="testimonials-title left-icon-title fl-h2">
             <span>Super testimonials...</span>
-            <i><svg class="title-location-icon" width="30" height="44.234" viewBox="0 0 30 44.234" fill="#ec131b">
-                  <use xlink:href="#title-location-icon"></use> </svg></i>
+            <i><svg class="quadarea-icon" width="52.562" height="44" viewBox="0 0 52.562 44" fill="#f2101c">
+                  <use xlink:href="#quadarea-icon"></use> </svg></i>
           </h2>
           <div class="testimonials-slider-wrap">
             <div class="testimonials-slider testimonialSlider">
