--- a/themes/mypiggyback/services.html
+++ b/themes/mypiggyback/services.html
@@ -222,7 +222,9 @@
     <div class="sic">
       <div class="sic-des">
         <h2 class="fl-h2 sic-title">24hr Emergency<br> mechanic response</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sceler-isque condimentum nisl vitae ornare. Nullam dapibus, lectus vitae tristique porttitor, tortor dui congue magna, a iaculis nibh risus ut augue. Mauris ultrices est condimentum arcu tempus dictum. Vivamus fermentum, dui sit amet ultrices aliquam, magna quam grav-ida ipsum, vel auctor libero felis igula. </p>
+        <div class="sic-p">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sceler-isque condimentum nisl vitae ornare. Nullam dapibus, lectus vitae tristique porttitor, tortor dui congue magna, a iaculis nibh risus ut augue. Mauris ultrices est condimentum arcu tempus dictum. Vivamus fermentum, dui sit amet ultrices aliquam, magna quam grav-ida ipsum, vel auctor libero felis igula. </p>
+        </div>          
         <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
       </div>
     </div>
@@ -240,8 +242,10 @@
     <div class="sic">
       <div class="sic-des">
         <h2 class="fl-h2 sic-title">Battery replacement</h2>
-        <p>Cras egestas efficitur urna at eleifend. Curabitur ac maximus libero, ultrices egestas metus. Proin aliquam finibus augue in blandit. Proin ullamcorper tincidunt dui, nec tempus quam congue a. Morbi efficitur arcu at metus tincidunt mollis. Pellentesque scelerisque sem vitae ex sodales, non volutpat mauris tristique.</p>
-        <p>Cras pellentesque lectus eget turpis placerat fermentum. Fusce fer-mentum, erat nec blandit aliquam, orci leo tempus augue, a auctor augue est ac ex. Sed nec pellentesque nunc. </p>
+        <div class="sic-p">
+          <p>Cras egestas efficitur urna at eleifend. Curabitur ac maximus libero, ultrices egestas metus. Proin aliquam finibus augue in blandit. Proin ullamcorper tincidunt dui, nec tempus quam congue a. Morbi efficitur arcu at metus tincidunt mollis. Pellentesque scelerisque sem vitae ex sodales, non volutpat mauris tristique.</p>
+          <p>Cras pellentesque lectus eget turpis placerat fermentum. Fusce fer-mentum, erat nec blandit aliquam, orci leo tempus augue, a auctor augue est ac ex. Sed nec pellentesque nunc. </p>
+        </div>  
         <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
       </div>
     </div>
@@ -259,7 +263,9 @@
     <div class="sic">
       <div class="sic-des">
         <h2 class="fl-h2 sic-title">24hr Emergency<br> mechanic response</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sceler-isque condimentum nisl vitae ornare. Nullam dapibus, lectus vitae tristique porttitor, tortor dui congue magna, a iaculis nibh risus ut augue. Mauris ultrices est condimentum arcu tempus dictum. Vivamus fermentum, dui sit amet ultrices aliquam, magna quam grav-ida ipsum, vel auctor libero felis igula. </p>
+        <div class="sic-p">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sceler-isque condimentum nisl vitae ornare. Nullam dapibus, lectus vitae tristique porttitor, tortor dui congue magna, a iaculis nibh risus ut augue. Mauris ultrices est condimentum arcu tempus dictum. Vivamus fermentum, dui sit amet ultrices aliquam, magna quam grav-ida ipsum, vel auctor libero felis igula. </p>
+        </div>  
         <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
       </div>
     </div>
@@ -277,8 +283,10 @@
     <div class="sic">
       <div class="sic-des">
         <h2 class="fl-h2 sic-title">Car body repair</h2>
-        <p>Cras egestas efficitur urna at eleifend. Curabitur ac maximus libero, ultrices egestas metus. Proin aliquam finibus augue in blandit. Proin ullamcorper tincidunt dui, nec tempus quam congue a. Morbi efficitur arcu at metus tincidunt mollis. Pellentesque scelerisque sem vitae ex sodales, non volutpat mauris tristique.</p>
-        <p>Cras pellentesque lectus eget turpis placerat fermentum. Fusce fer-mentum, erat nec blandit aliquam, orci leo tempus augue, a auctor augue est ac ex. Sed nec pellentesque nunc. </p>
+        <div class="sic-p">
+          <p>Cras egestas efficitur urna at eleifend. Curabitur ac maximus libero, ultrices egestas metus. Proin aliquam finibus augue in blandit. Proin ullamcorper tincidunt dui, nec tempus quam congue a. Morbi efficitur arcu at metus tincidunt mollis. Pellentesque scelerisque sem vitae ex sodales, non volutpat mauris tristique.</p>
+          <p>Cras pellentesque lectus eget turpis placerat fermentum. Fusce fer-mentum, erat nec blandit aliquam, orci leo tempus augue, a auctor augue est ac ex. Sed nec pellentesque nunc. </p>
+        </div>  
         <a class=" fl-red-btn" href="#">BOOK SERVICE</a>
       </div>
     </div>
