--- a/themes/mypiggyback/front-page.html
+++ b/themes/mypiggyback/front-page.html
@@ -252,6 +252,7 @@
 <body>
 <header class="header-wrap">
   <div class="top-bar">
+    <span></span>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -312,6 +313,14 @@
                     <li><a href="#">Contact</a></li>
                   </ul>
                 </nav>
+              </div>
+              <div class="xs-hamburger">
+                <div class="hamburger-icon">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </div>
+                <strong class="hamburger-title">MENU</strong>
               </div>
               <div class="hdr-order-icon">
                 <i><img src="assets/images/card-icon.svg" alt=""></i>
