--- a/themes/mypiggyback/home2.html
+++ b/themes/mypiggyback/home2.html
@@ -219,7 +219,7 @@
             </div>
             <div class="ftr-menu ftr-col-2">
               <h4 class="ftr-menu-title fl-h4">Site Links...</h4>
-              <ul class="reset-list">
+              <ul class="reset-list clearfix">
                 <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Home</a></li>
                 <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Book Online</a></li>
                 <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Vehicle Recovery</a></li>
