--- a/themes/mypiggyback/home2.html
+++ b/themes/mypiggyback/home2.html
@@ -171,7 +171,7 @@
             <div class="ftr-logo-ctlr">
               <h4 class="ftr-menu-title fl-h4">About...</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vulputate lobortis mollis fusce justo fringilla.</p>
-              <div class="ftr-logo">
+              <div class="ftr-logo hide-sm">
                 <a href="#"><img src="assets/images/ftr-logo.png"></a>
                 <span class="ftr-logo-title">A <strong>super quick</strong> lift from A to B</span>
               </div>
@@ -210,7 +210,7 @@
               </div>
               <div class="ftr-menu-socials-media">
                 <ul class="reset-list">
-                  <li><a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a target="_blank" href="#"><i class="fab fa-facebook-square"></i></a></li>
                   <li><a target="_blank" href="#"><i class="fab fa-twitter"></i></a></li>
                   <li><a target="_blank" href="#"><i class="fab fa-instagram"></i></a></li>
                   <li><a target="_blank" href="#"><i class="fab fa-linkedin-in"></i></a></li>
@@ -246,14 +246,15 @@
       <div class="row">
         <div class="col-md-12">
           <div class="ftr-btm-inr">
-            <div class="ftr-btm-copywrite">
-              <p>&copy; Copyright 2021 - All rights reserved to My Piggyback Ltd</p>
-            </div>
             <div class="ftr-btm-menu">
               <ul class="reset-list">
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Terms and Conditions</a></li>
+                <li><a href="#">Cookie Policy</a></li>
               </ul>
+            </div>
+            <div class="ftr-btm-copywrite">
+              <p>&copy; Copyright 2021 - All rights reserved to My Piggyback Ltd</p>
             </div>
           </div>
         </div>
