--- a/themes/mypiggyback/front-page.html
+++ b/themes/mypiggyback/front-page.html
@@ -337,7 +337,7 @@
 </header>
 
 
-<section class="home-page-bnr">
+<section class="home-page-bnr d-none">
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d66815.33056846341!2d-0.14238880307146762!3d51.51248988308131!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2sbd!4v1615400813839!5m2!1sen!2sbd" width="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   <div class="loc-searching-form-cntlr show-sm">
     <div style="position: relative;">
@@ -471,7 +471,7 @@
   </div>
 </section>
 
-<section class="piggyback-sec">
+<section class="piggyback-sec d-none">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -554,7 +554,7 @@
   </div>
 </section>
 
-<section class="Vehicle-sec-wrap">
+<section class="Vehicle-sec-wrap d-none">
   <div class="Vehicle-left-bg inline-bg" style="background: url('assets/images/Vehicle-left-bg-img.jpg');">
     
   </div>
@@ -710,7 +710,7 @@
 </section>
 
 
-<section class="main-content">
+<section class="main-content d-none">
   <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -725,7 +725,7 @@
 
 
 
-<section class="mpb-about-sec inline-bg" style="background: url('assets/images/mpb-about-sec-bg.png');">
+<section class="mpb-about-sec inline-bg d-none" style="background: url('assets/images/mpb-about-sec-bg.png');">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -760,7 +760,7 @@
 
 
 
-<footer class="footer-wrp">
+<footer class="footer-wrp d-none">
   <div class="ftr-top">
     <div class="ftr-top-bg">
       <img src="assets/images/ftr-bg-icon.png">
