--- a/themes/mypiggyback/about.html
+++ b/themes/mypiggyback/about.html
@@ -336,7 +336,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="mpb-about-des-sec-inr clearfix">
+        <div class="mpb-about-des-sec-inr clearfix hide-sm">
           <div class="mbp-about-des-lft">
             <div class="mbp-about-des">
               <p><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque mauris vel turpis semper, pharetra tincidunt magna scelerisque. Ut finibus ex nec sodales ullamcorper. Phasellus a neque pretium, hendrerit tortor.</strong></p>
@@ -353,6 +353,21 @@
           </div>
           <div class="mbp-about-des-rgt">
             <img src="assets/images/mpb-about-des-rgt-img-01.jpg">
+          </div>
+        </div>
+        <div class="xs-about-des clearfix show-sm">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque mauris vel turpis semper, pharetra tincidunt magna scelerisque. Ut finibus ex nec sodales ullamcorper. Phasellus a neque pretium, hendrerit tortor.</p>
+          <p class="text-img">Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at. Phasellus ante magna, egestas a ultricies quis, dapibus at massa. Aliquam laoreet libero id tristique condimentum. Vivamus quis neque eu diam ultricies congue in non enim. 
+            <img src="assets/images/mpb-about-des-rgt-img-01.jpg">
+          </p>
+          <p>Aliquam semper ex tortor, imperdiet consequat sapien efficitur et. Duis pretium velit non turpis luctus, vel maximus risus.. </p>
+          <div class="mbp-about-btn">
+            <div class="mbp-abot-btn-red">
+              <a class="fl-red-btn" href="#">BOOK NOW</a>
+            </div>
+            <div class="mbp-abot-btn-blue">
+              <a class="fl-red-btn blue-btn" href="#">OUR SERVICES</a>
+            </div>
           </div>
         </div>
       </div>
