--- a/themes/mypiggyback/home2.html
+++ b/themes/mypiggyback/home2.html
@@ -338,7 +338,7 @@
               </div>
               <div class="ftr-menu-socials-media">
                 <ul class="reset-list">
-                  <li><a target="_blank" href="#"><i class="fab fa-facebook-square"></i></a></li>
+                  <li><a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a></li>
                   <li><a target="_blank" href="#"><i class="fab fa-twitter"></i></a></li>
                   <li><a target="_blank" href="#"><i class="fab fa-instagram"></i></a></li>
                   <li><a target="_blank" href="#"><i class="fab fa-linkedin-in"></i></a></li>
