--- a/themes/mypiggyback/about.html
+++ b/themes/mypiggyback/about.html
@@ -356,9 +356,11 @@
           </div>
         </div>
         <div class="xs-about-des clearfix show-sm">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque mauris vel turpis semper, pharetra tincidunt magna scelerisque. Ut finibus ex nec sodales ullamcorper. Phasellus a neque pretium, hendrerit tortor.</p>
-          <p class="text-img">Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at. Phasellus ante magna, egestas a ultricies quis, dapibus at massa. Aliquam laoreet libero id tristique condimentum. Vivamus quis neque eu diam ultricies congue in non enim. 
+          <p class="text-img">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque pellentesque mauris vel turpis semper, pharetra tincidunt magna scelerisque. Ut finibus ex nec sodales ullamcorper. Phasellus a neque pretium, hendrerit tortor.
             <img src="assets/images/mpb-about-des-rgt-img-01.jpg">
+          </p>
+          <p>Phasellus a neque pretium, hendrerit tortor vitae, accumsan neque. Suspendisse posuere odio quam, id elementum arcu egestas at. Phasellus ante magna, egestas a ultricies quis, dapibus at massa. Aliquam laoreet libero id tristique condimentum. Vivamus quis neque eu diam ultricies congue in non enim. 
+            
           </p>
           <p>Aliquam semper ex tortor, imperdiet consequat sapien efficitur et. Duis pretium velit non turpis luctus, vel maximus risus.. </p>
           <div class="mbp-about-btn">
