--- a/themes/mypiggyback/about.html
+++ b/themes/mypiggyback/about.html
@@ -379,7 +379,8 @@
 
 <section class="mbp-about-num-sec">
   <div class="mbp-about-num-lft-bg">
-    <img src="assets/images/mbp-about-num-lft-bg.jpg">
+    <img class="hide-sm" src="assets/images/mbp-about-num-lft-bg.jpg">
+    <img class="show-sm" src="assets/images/xs-mbp-about-num-lft-bg.jpg">
   </div>
   <div class="container">
     <div class="row">
@@ -684,7 +685,7 @@
               </div>
               <div class="ftr-menu-socials-media">
                 <ul class="reset-list">
-                  <li><a target="_blank" href="#"><i class="fab fa-facebook-square"></i></a></li>
+                  <li><a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a></li>
                   <li><a target="_blank" href="#"><i class="fab fa-twitter"></i></a></li>
                   <li><a target="_blank" href="#"><i class="fab fa-instagram"></i></a></li>
                   <li><a target="_blank" href="#"><i class="fab fa-linkedin-in"></i></a></li>
