contact page some updates

--- a/themes/mypiggyback/contact.html
+++ b/themes/mypiggyback/contact.html
@@ -324,7 +324,7 @@
 
 <section class="contact-form-sec-wrp clearfix">
   <div class="contact-map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d66815.33056846341!2d-0.14238880307146762!3d51.51248988308131!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2sbd!4v1615400813839!5m2!1sen!2sbd" width="100%" height="700" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d66815.33056846341!2d-0.14238880307146762!3d51.51248988308131!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2sbd!4v1615400813839!5m2!1sen!2sbd" width="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </div>
   <div class="contact-form-sec">
     <div class="container">
@@ -371,8 +371,8 @@
 
 
 <section class="contact-info-sec-wrp">
-  <div class="contact-info-bg">
-    <img src="assets/images/contact-info-sec-bg.png">
+  <div class="contact-info-bg" style="background: url(assets/images/contact-info-sec-bg.png);">
+    <!-- <img src="assets/images/contact-info-sec-bg.png"> -->
   </div>
   <div class="container">
     <div class="row">
@@ -399,9 +399,9 @@
                   <i><svg class="contact-info-phn-icon-svg" width="30" height="30" viewBox="0 0 30 30" fill="#fff">
                   <use xlink:href="#contact-info-phn-icon-svg"></use></svg></i>
                 </h3>
-                <a href="tel:02920 257257">02920 257257</a>
-                <a href="tel:01234 564584">01234 564584</a>
-                <a href="tel:01664 394273">01664 394273</a>
+                <div><a href="tel:02920 257257">02920 257257</a></div>
+                <div><a href="tel:01234 564584">01234 564584</a></div>
+                <div><a href="tel:01664 394273">01664 394273</a></div>
               </div>
             </li>
             <li>
@@ -410,9 +410,9 @@
                   <i><svg class="contact-info-mail-icon-svg" width="30" height="29.999" viewBox="0 0 30 29.999" fill="#fff">
                   <use xlink:href="#contact-info-mail-icon-svg"></use></svg></i>
                 </h3>
-                <a href="mailto:info@mypiggyback.com">info@mypiggyback.com</a>
-                <a href="mailto:order@mypiggyback.com">order@mypiggyback.com</a>
-                <a href="mailto:drivers@mypiggyback.com">drivers@mypiggyback.com</a>
+                <div><a href="mailto:info@mypiggyback.com">info@mypiggyback.com</a></div>
+                <div><a href="mailto:order@mypiggyback.com">order@mypiggyback.com</a></div>
+                <div><a href="mailto:drivers@mypiggyback.com">drivers@mypiggyback.com</a></div>
               </div>
             </li>
           </ul>
@@ -429,8 +429,9 @@
       <div class="col-md-12">
         <div class="we-accept-wrp clearfix">
           <div class="we-accept-lft">
-            <h4 class="we-accept-title left-icon-title fl-h4">We accept all major credit and debit cards
+            <h4 class="we-accept-title left-icon-title fl-h4">
               <i class="far fa-bell"></i>
+              We accept all major credit and debit cards
             </h4>
           </div>
           <div class="we-accept-rgt">
