--- a/themes/mypiggyback/index.html
+++ b/themes/mypiggyback/index.html
@@ -105,14 +105,107 @@
 
 
 <footer class="footer-wrp">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-4">
-          <div class="ftr-col">
+  <div class="ftr-top">
+    <div class="ftr-top-bg">
+      <img src="assets/images/ftr-bg-icon.png">
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="ftr-top-inr clearfix">
+            <div class="ftr-logo-ctlr">
+              <h4 class="ftr-menu-title fl-h4">About...</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vulputate lobortis mollis fusce justo fringilla.</p>
+              <div class="ftr-logo hide-sm">
+                <a href="#"><img src="assets/images/ftr-logo.png"></a>
+                <span class="ftr-logo-title">A <strong>super quick</strong> lift from A to B</span>
+              </div>
+            </div>
+            <div class="ftr-menu ftr-col-1">
+              <h4 class="ftr-menu-title fl-h4">Get in touch...</h4>
+              <div class="ftr-menu-phn">
+                <a href="tel:+442920257257">
+                  +44 2920 257 257
+                  <i>
+                    <svg class="ftr-phn-icon-svg" width="17" height="16.151" viewBox="0 0 17 16.151" fill="#fff">
+                      <use xlink:href="#ftr-phn-icon-svg"></use>
+                    </svg> 
+                </i>
+                </a>
+              </div>
+              <div class="ftr-menu-mail">
+                <a href="mailto:info@mypiggyback.com">
+                  info@mypiggyback.com
+                  <i>
+                    <svg class="ftr-email-icon-svg" width="19" height="12.666" viewBox="0 0 19 12.666" fill="#fff">
+                      <use xlink:href="#ftr-email-icon-svg"></use>
+                    </svg> 
+                  </i>
+                </a>
+              </div>
+              <div class="ftr-menu-location">
+                <a target="_blank" href="#">
+                  15 Ingestre Place, Suite 84, <br> London, W1F 0DU
+                  <i>
+                    <svg class="ftr-map-marker-icon-svg" width="16" height="21.333" viewBox="0 0 16 21.333" fill="#fff">
+                      <use xlink:href="#ftr-map-marker-icon-svg"></use>
+                    </svg> 
+                  </i>
+                </a>
+              </div>
+              <div class="ftr-menu-socials-media">
+                <ul class="reset-list">
+                  <li><a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a target="_blank" href="#"><i class="fab fa-twitter"></i></a></li>
+                  <li><a target="_blank" href="#"><i class="fab fa-instagram"></i></a></li>
+                  <li><a target="_blank" href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="ftr-menu ftr-col-2">
+              <h4 class="ftr-menu-title fl-h4">Site Links...</h4>
+              <ul class="reset-list clearfix">
+                <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Home</a></li>
+                <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Book Online</a></li>
+                <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Vehicle Recovery</a></li>
+                <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Vehicle Transport</a></li>
+                <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Our Services</a></li>
+                <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Contact Us  </a></li>
+              </ul>
+            </div>
+            <div class="ftr-menu ftr-col-3">
+              <h4 class="ftr-menu-title fl-h4">Newsletter Signup...</h4>
+              <p>Sign up to our mailing list and receive <br>  exclusive updates and discounts.  </p>
+              <div class="ftr-search-box">
+                <input type="text" name="email" placeholder="Your email address">
+                <button>JOIN</button>
+              </div>
+            </div>
           </div>
+        </div>
       </div>
     </div>
   </div> 
+  <div class="ftr-btm">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="ftr-btm-inr">
+            <div class="ftr-btm-menu">
+              <ul class="reset-list">
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms and Conditions</a></li>
+                <li><a href="#">Cookie Policy</a></li>
+              </ul>
+            </div>
+            <div class="ftr-btm-copywrite">
+              <p>&copy; Copyright 2021 - All rights reserved to My Piggyback Ltd</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
@@ -123,6 +216,7 @@
 <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
 <script src="assets/fancybox3/dist/jquery.fancybox.min.js"></script>
 <script src="assets/slick.slider/slick.js"></script>
+<script src="assets/swiper/swiper-bundle.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBaRQsAJCZyyD6MbCg0jB_0sdLGEOxt97Y"></script>
 <script src="assets/js/jquery.matchHeight-min.js"></script>
 <script src="assets/js/app.js"></script>
