--- a/themes/mypiggyback/services.html
+++ b/themes/mypiggyback/services.html
@@ -306,7 +306,7 @@
             <div class="ftr-logo-ctlr">
               <h4 class="ftr-menu-title fl-h4">About...</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vulputate lobortis mollis fusce justo fringilla.</p>
-              <div class="ftr-logo">
+              <div class="ftr-logo hide-sm">
                 <a href="#"><img src="assets/images/ftr-logo.png"></a>
                 <span class="ftr-logo-title">A <strong>super quick</strong> lift from A to B</span>
               </div>
@@ -354,7 +354,7 @@
             </div>
             <div class="ftr-menu ftr-col-2">
               <h4 class="ftr-menu-title fl-h4">Site Links...</h4>
-              <ul class="reset-list">
+              <ul class="reset-list clearfix">
                 <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Home</a></li>
                 <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Book Online</a></li>
                 <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Vehicle Recovery</a></li>
@@ -381,14 +381,15 @@
       <div class="row">
         <div class="col-md-12">
           <div class="ftr-btm-inr">
-            <div class="ftr-btm-copywrite">
-              <p>&copy; Copyright 2021 - All rights reserved to My Piggyback Ltd</p>
-            </div>
             <div class="ftr-btm-menu">
               <ul class="reset-list">
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Terms and Conditions</a></li>
+                <li><a href="#">Cookie Policy</a></li>
               </ul>
+            </div>
+            <div class="ftr-btm-copywrite">
+              <p>&copy; Copyright 2021 - All rights reserved to My Piggyback Ltd</p>
             </div>
           </div>
         </div>
