--- a/themes/mypiggyback/vehicle-recovery.html
+++ b/themes/mypiggyback/vehicle-recovery.html
@@ -413,7 +413,7 @@
       <div class="col-md-12">
         <div class="piggyback-cntlr">
           <h2 class="piggyback-title left-icon-title fl-h2">
-            <span>How to book this service...</span>
+            <span>How to book <strong>this service...</strong></span>
             <i><svg class="title-location-icon" width="30" height="44.234" viewBox="0 0 30 44.234" fill="#ec131b">
                   <use xlink:href="#title-location-icon"></use> </svg></i>
           </h2>
@@ -484,43 +484,57 @@
 </section>
 
 
-<section class="Vehicle-sec-wrap order-pgbk-home">
-  <div class="Vehicle-left-bg inline-bg" style="background: url('assets/images/Vehicle-left-bg-img.jpg');">
-    
-  </div>
-  <div class="Vehicle-sec">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="Vehicle-cntlr">
-            <div class="Vehicle-desc-cntlr">
-              <div class="Vehicle-desc">
-                <h2 class="Vehicle-desc-title fl-h2">Order a piggyback home.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
-                <div class="vcl-btn-cntlr">
-                  <div class="vcl-btn vcl-fst-btn">
-                    <a class="fl-red-btn" href="#">BOOK NOW</a>
-                  </div>
-                  <div class="vcl-btn vcl-scnd-btn">
-                    <a class="fl-trnsprnt-btn" href="#">OUR SERVICES</a>
+<section class="Vehicle-sec-wrap order-pgbk-home vr-Vehicle-sec">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2 class="Vehicle-sec-title fl-h2 left-icon-title show-sm">
+          <span>Our Services...</span>
+          <i><svg class="title-location-icon" width="30" height="44.234" viewBox="0 0 30 44.234" fill="#ec131b">
+            <use xlink:href="#title-location-icon"></use> </svg></i>
+          </h2>
+        </div>
+      </div>
+    </div>
+  <div>
+    <div class="Vehicle-left-bg inline-bg" style="background: url('assets/images/Vehicle-left-bg-img.jpg');">
+
+    </div>
+    <div class="Vehicle-sec">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="Vehicle-cntlr">
+              <div class="Vehicle-desc-cntlr">
+                <div class="xs-Vehicle-left-bg inline-bg show-sm"style="background: url('assets/images/Vehicle-left-bg-img.jpg');"></div>
+                <div class="Vehicle-desc">
+                  <h2 class="Vehicle-desc-title fl-h2">Order a piggyback home.</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
+                  <div class="vcl-btn-cntlr">
+                    <div class="vcl-btn vcl-fst-btn">
+                      <a class="fl-red-btn" href="#">BOOK NOW</a>
+                    </div>
+                    <div class="vcl-btn vcl-scnd-btn">
+                      <a class="fl-trnsprnt-btn" href="#">OUR SERVICES</a>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
 
-            <div class="vcl-right-wrap">
-              <h2 class="Vehicle-title left-icon-title fl-h2"><span>How it works...</span>
-                <i><svg class="title-location-icon" width="30" height="44.234" viewBox="0 0 30 44.234" fill="#ec131b">
-                  <use xlink:href="#title-location-icon"></use> </svg></i>
-              </h2>
-              <div class="ordr-pgbk-hm-rt-img">
-                <img src="assets/images/order-pgbk-home-img-01.png" alt="">
+              <div class="vcl-right-wrap">
+                <h2 class="Vehicle-title left-icon-title fl-h2 hide-sm"><span>How it works...</span>
+                  <i><svg class="title-location-icon" width="30" height="44.234" viewBox="0 0 30 44.234" fill="#ec131b">
+                    <use xlink:href="#title-location-icon"></use> </svg></i>
+                  </h2>
+                  <div class="ordr-pgbk-hm-rt-img">
+                    <img src="assets/images/order-pgbk-home-img-01.png" alt="">
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
   </div>
 </section>
 
@@ -537,7 +551,7 @@
             <img src="assets/images/super-piggs.png" alt="">
           </div>
           <h2 class="testimonials-title left-icon-title fl-h2">
-            <span>Super testimonials...</span>
+            <span><strong>Super </strong>testimonials...</span>
             <i><svg class="quadarea-icon" width="52.562" height="44" viewBox="0 0 52.562 44" fill="#f2101c">
                   <use xlink:href="#quadarea-icon"></use> </svg></i>
           </h2>
