--- a/themes/mypiggyback/front-page.html
+++ b/themes/mypiggyback/front-page.html
@@ -725,7 +725,7 @@
 </section>
 
 
-<section class="main-content d-none">
+<section class="main-content">
   <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -740,7 +740,7 @@
 
 
 
-<section class="mpb-about-sec inline-bg d-none" style="background: url('assets/images/mpb-about-sec-bg.png');">
+<section class="mpb-about-sec inline-bg" style="background: url('assets/images/mpb-about-sec-bg.png');">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -775,7 +775,7 @@
 
 
 
-<footer class="footer-wrp d-none">
+<footer class="footer-wrp">
   <div class="ftr-top">
     <div class="ftr-top-bg">
       <img src="assets/images/ftr-bg-icon.png">
