--- a/themes/mypiggyback/front-page.html
+++ b/themes/mypiggyback/front-page.html
@@ -577,14 +577,14 @@
 
                 <div class="xs-Vehicle-left-bg inline-bg show-sm"style="background: url('assets/images/Vehicle-left-bg-img.jpg');"></div>
                 <div id="vcl-tab-1" class="Vehicle-desc fl-tab-content vcl-tab-content current">
-                  <h2 class="Vehicle-desc-title fl-h2">Vehicle Tow & Recovery</h2>
+                  <h2 class="Vehicle-desc-title fl-h2">Vehicle Tow <br>& Recovery</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
                   <div class="vcl-btn-cntlr">
                     <div class="vcl-btn vcl-fst-btn">
                       <a class="fl-red-btn" href="#">BOOK NOW</a>
                     </div>
                     <div class="vcl-btn vcl-scnd-btn">
-                      <a class="fl-trnsprnt-btn" href="#">FIND OUT <span>MORE</span></a>
+                      <a class="fl-trnsprnt-btn" href="#">FIND OUT MORE</a>
                     </div>
                   </div>
                 </div>
