--- a/themes/mypiggyback/vehicle-recovery.html
+++ b/themes/mypiggyback/vehicle-recovery.html
@@ -536,7 +536,7 @@
               <div class="Vehicle-desc-cntlr">
                 <div class="xs-Vehicle-left-bg inline-bg show-sm"style="background: url('assets/images/Vehicle-left-bg-img.jpg');"></div>
                 <div class="Vehicle-desc">
-                  <h2 class="Vehicle-desc-title fl-h2">Order a piggyback home.</h2>
+                  <h2 class="Vehicle-desc-title fl-h2">Order a <br>piggyback home.</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales sagittis lorem sed mattis. Nunc rutrum mattis pulvinar. In sem velit, faucibus non mauris sed, mattis auctor purus. Etiam egestas nisl eget dapibus suscipit. Nam rutrum nisl sapien, id hendrerit nulla ullamcorper a ipsum nisl.</p>
                   <div class="vcl-btn-cntlr">
                     <div class="vcl-btn vcl-fst-btn">
